--- a/package.json
+++ b/package.json
@@ -7,14 +7,18 @@
     "start": "nodemon server.js",
     "lint": "eslint '**/*.js' --fix --ignore-pattern node_modules/",
     "format": "prettier --write '**/*.js'",
-    "test:watch": "jest --watchAll"
+    "test:watch": "jest --watchAll --detectOpenHandles --runInBand"
   },
   "keywords": [],
   "author": "",
   "license": "ISC",
   "dependencies": {
+    "db-migrate": "^0.11.13",
+    "db-migrate-pg": "^1.2.2",
     "fastify": "^4.10.2",
+    "fastify-plugin": "^4.4.0",
     "nodemon": "^2.0.20",
+    "pg-promise": "^10.15.4",
     "pino": "^8.8.0",
     "pino-pretty": "^9.1.1"
   },
@@ -23,13 +27,10 @@
     "eslint-config-airbnb-base": "^15.0.0",
     "eslint-config-prettier": "^8.5.0",
     "eslint-plugin-import": "^2.26.0",
+    "eslint-plugin-jest": "^27.1.7",
     "eslint-plugin-prettier": "^4.2.1",
     "jest": "^29.3.1",
     "prettier": "2.8.1",
     "tap": "^16.3.2"
-  },
-  "eslintIgnore": [
-    "*.test.js",
-    "*.spec.js"
-  ]
+  }
 }
