--- a/package.json
+++ b/package.json
@@ -5,7 +5,9 @@
   "main": "index.js",
   "scripts": {
     "start": "nodemon server.js",
-    "lint": "eslint '**/*.js' --fix --ignore-pattern node_modules/",
+    "test": "CI=true jest --coverage --runInBand --detectOpenHandles",
+    "lint:fix": "eslint '**/*.js' --fix",
+    "lint": "eslint '**/*.js'",
     "format": "prettier --write '**/*.js'",
     "test:watch": "jest --watchAll --detectOpenHandles --runInBand"
   },
