--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
     "dotenv": "^16.0.3",
     "fastify": "^4.10.2",
     "fastify-plugin": "^4.4.0",
+    "moment": "^2.29.4",
     "nodemon": "^2.0.20",
     "pg-promise": "^10.15.4",
     "pino": "^8.8.0",
